# daft-func

./: .gitignore  BUGFIX_batch_non_mapped.md  CACHE_MEMORY_DISK_PARITY.md  README.md  main.py  pyproject.toml  test_batch_bug.py  test_batch_list_bug.py  test_debug_batch.py  test_default_params.py  test_error_message.py  test_memory_cache_bool_return.py  test_memory_vs_disk_cache.py  test_user_example_caching.py  test_user_example_performance.py  verify_final_solution.py  verify_user_example.py
.ruler/: instructions.md
docs/: BUGFIX_batch_non_mapped.md  cache-backend-architecture.md  cache-stateful-objects-fix.md  caching-batch-operations.md  caching-usage.md  caching.md  daft-pdf-example.md  daft-udf.md  fixes-applied.md  overview.md  pipefunc-viz.md  refactoring-summary.md  visualization-performance.md  visualization.md
examples/: cache_demo.py  progress_bar_demo.py  progress_parallel_demo.py  progress_themes_demo.py  retrieval_batch_cache_demo.py  test_retrieval_cache.py  visualize_demo.py
notebooks/: anywidget_pipeline_demo.ipynb  daft_func_dag_viz.ipynb  playground.ipynb  v2.ipynb
scripts/: demo_new_api.py  update_markdown_runner.py  update_notebook_runner.py  update_runner_usage.py
src/: flow.py
tests/: __init__.py  test_alignment_demo.py  test_batch_bug.py  test_batch_list_bug.py  test_cache.py  test_cache_alignment_demo.py  test_cache_batch_mode.py  test_cache_logging.py  test_cache_object_serialization.py  test_cache_protocol.py  test_cache_stateful_objects.py  test_cache_stateful_side_effects.py  test_comprehensive_cache_comparison.py  test_debug_instance_ids.py  test_debug_no_series.py  test_debug_select.py  test_default_params.py  test_error_message.py  test_exact_user_scenario.py  test_graphviz_options.py  test_jupyter_progress.py  test_memory_cache_bool_return.py  test_memory_disk_cache_parity.py  test_memory_vs_disk_cache.py  test_per_item_debug.py  test_progress.py  test_registry.py  test_runner.py  test_types.py  test_user_example_caching.py  test_user_example_performance.py  test_visual_alignment.py  (+4 more)
(+19 files in other folders)
