[project]
name = "dagflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "daft>=0.6.7",
    "getdaft>=0.5.0",
    "ipykernel>=7.0.1",
    "pydantic>=2.12.3",
]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daflow", "src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]