[project]
name = "dagflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "daft>=0.6.7",
    "getdaft>=0.5.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "pydantic>=2.12.3",
    "tqdm>=4.67.1",
]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daflow", "src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
