[project]
name = "daft-func"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "daft>=0.6.7",
    "diskcache>=5.6.3",
    "getdaft>=0.5.0",
    "graphviz>=0.21",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "rich>=13.0.0",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
]

[project.optional-dependencies]
viz = [
    "networkx>=3.0",
    "graphviz>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daft_func", "src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
